--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
-author_profile: true
+title: "Welcome to My Website"
+header:
+  image: image assets/images/universo_cut.jpg 
+  caption: "This is my header image caption" # Optional caption
+  overlay_image: /path-to-your-image.jpg # Optional: To add an overlay effect
+  overlay_filter: rgba(0, 0, 0, 0.5) # Optional: To darken or lighten the overlay
+  actions:
+    - label: "Learn More"
+      url: /about/
 ---
