--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: home
 author_profile: true
 title: "Welcome to My Website"
 header:
-  image: "image assets/images/universo_cut.jpg" 
+  image: "/assets/images/universo_cut.jpg"
 ---
