--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: home
 author_profile: true
 title: "Welcome to My Website"
 header:
-  image: "/assets/images/lss.jpg"
+  image: "/assets/images/andes.jpeg"
 ---
