--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 author_profile: true
-title: "Welcome to My Website"
+title: "Home"
 header:
   image: "/assets/images/andes.jpeg"
 ---
